--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -962,6 +962,38 @@ transition: box-shadow .4s;
   color: var(--first-color);
 }
 
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-wrapper {
+    display: flex;
+}
+
+.swiper-slide {
+    flex: 1 0 auto;
+    width: 33.33%; /* Ensure each slide takes up 1/3 of the container */
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.projects__gallery-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    cursor: pointer;
+}
+
+.projects__gallery-arrow--left {
+    left: 10px;
+}
+
+.projects__gallery-arrow--right {
+    right: 10px;
+}
+
 /*=============== CONTACT ===============*/
 .contact {
   padding: 4rem 0;
