--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -845,13 +845,12 @@ transition: box-shadow .4s;
 }
 
 .projects__gallery {
-  overflow-x: auto;
-  white-space: nowrap;
+  overflow: hidden;
   padding: 2rem 0;
 }
 
 .projects__gallery-container {
-  display: inline-flex;
+  display: flex;
   gap: 2rem;
 }
 
@@ -859,11 +858,10 @@ transition: box-shadow .4s;
   position: relative;
   overflow: hidden;
   transition: transform 0.3s, box-shadow 0.3s;
-  width: 300px;
-  display: inline-block;
-  vertical-align: top;
   background-color: var(--white-color);
   border-radius: 8px;
+  flex: 1 0 30%; /* Adjust the width of the cards */
+  box-sizing: border-box;
 }
 
 .projects__card:hover {
@@ -974,7 +972,6 @@ transition: box-shadow .4s;
 
 .swiper-slide {
     flex: 1 0 auto;
-    width: 33.33%; /* Ensure each slide takes up 1/3 of the container */
     box-sizing: border-box;
     padding: 10px;
 }
@@ -993,6 +990,18 @@ transition: box-shadow .4s;
 
 .projects__gallery-arrow--right {
     right: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+  .projects__card {
+    flex: 1 0 45%; /* Adjust the width of the cards for medium screens */
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .projects__card {
+    flex: 1 0 100%; /* Adjust the width of the cards for small screens */
+  }
 }
 
 /*=============== CONTACT ===============*/
