--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -830,19 +830,37 @@ transition: box-shadow .4s;
 
 /*=============== PROJECTS ===============*/
 
-.swiper {
-  width: 600px;
-  height: 300px;
-}
-
-/*.projects {
+.projects {
   padding: 4rem 0;
   background-color: var(--body-color);
   transition: background-color .4s;
   position: relative;
 }
 
-.projects__container {
+.swiper {
+  width: 100%;
+  height: 60%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
+/*.projects__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
