--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -858,6 +858,16 @@ transition: box-shadow .4s;
   object-fit: cover;
 }
 
+.swiper-button-prev{
+  color: var(--first-color);
+  background-color: var(--container-color);
+  padding-block: 100vh;
+}
+.swiper-button-next{
+  color: var(--first-color);
+  background-color: var(--container-color);
+  padding-block: 100vh;
+}
 
 
 /*.projects__container {
