--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -758,7 +758,8 @@ transition: box-shadow .4s;
 
 .services__card {
     background-color: var(--white-color);
-    padding: 1rem;
+    height: 100%;
+    padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
