--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -873,14 +873,16 @@ transition: box-shadow .4s;
 }
 
 .swiper-button-prev{
-  color: var(--first-color);
-  background-color: var(--container-color);
+  color: var(--first-color) !important;
 }
 .swiper-button-next{
-  color: var(--first-color);
-  background-color: var(--container-color);
+  color: var(--first-color) !important;
 }
 
+.swiper-pagination-bullet-active {
+  opacity: var(--swiper-pagination-bullet-opacity, 1);
+  background: var(--first-color) !important;
+}
 
 /*.projects__container {
   display: grid;
