--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,7 +302,7 @@ transition: box-shadow .4s;
     top: 0; /* Show the menu when active */
   }
   .nav__toggle {
-    display: block;
+    display: flex;
   }
   .nav__list {
     display: none; /* Hide the mobile nav list by default */
@@ -435,7 +435,7 @@ transition: box-shadow .4s;
 /* Responsive adjustments for smaller screens */
 @media screen and (max-width: 768px) {
   .home__name {
-    font-size: var(--h1-font-size); /* Adjust font size for mobile */
+    display: none;
   }
 }
 
