--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -512,12 +512,10 @@ transition: box-shadow .4s;
 }
 
 .home__social {
-  position: absolute;
-  right: 1rem; /* Position it to the right */
-  bottom: 10rem; /* Position it at the bottom */
+  position: relative;
   display: flex;
-  flex-direction: column;
-  row-gap: 1rem;
+  flex-direction: row;
+  column-gap: 1rem;
   font-size: 1.5rem;
   z-index: 10;
 }
@@ -578,8 +576,7 @@ transition: box-shadow .4s;
 }
 
 .home__scroll{
-  position: absolute;
-  bottom: 2rem;
+  position: relative;
   display: block;
   width: max-content;
   margin: 0 auto;
