--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -580,6 +580,11 @@ transition: box-shadow .4s;
     width: auto;
   }
 }
+.home__social-text{
+  font-size: var(--normal-font-size);
+  color: var(--text-color-light);
+  background-color: var(--black-color);
+}
 
 .home__info{
   margin-top: 2rem;
