--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -559,7 +559,7 @@ transition: box-shadow .4s;
   color: var(--white-color);
   font-size: 1.25rem;
   padding: 6px;
-  display: grid;
+  display: inline-flex;
   place-items: center;
   transition: background-color .3s;
 }
