--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -456,7 +456,7 @@ transition: box-shadow .4s;
 }
 
 .home__container {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   flex-direction: column;
