--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -730,6 +730,7 @@ height: var(--header-height); /* Ensure the header height is set */
     position: relative;
     text-align: center;
     max-height: 90vh;
+    padding-top: 2rem;
 }
 
 @media screen and (max-width: 768px) {
